fix(api): slight sidescroll on mobile from long inline-block <code> tags, these now overflow to avoid the sidescroll

--- a/css/api.css
+++ b/css/api.css
@@ -19,6 +19,8 @@ code:not([class]) {
 	display: inline-block;
 	padding: 1px 2px;
 	background-color: #FFF;
+	overflow: auto;
+	max-width: 100%;
 }
 
 a {
